# CryoLigATE

./: .gitignore  LICENSE  README.md  enviornment.yml  environment.yml  pyproject.toml
.github/workflows/: pypi-publish.yml
CryoLigate/: inference.py  model.py
cryoligate/: inference.py  model.py
example/8si9/: original_Y4B_ChainA_402.mrc  refined_Y4B_ChainA_402.mrc
example/8si9_ligand_altered/: original_Y4B_ChainA_402.mrc  refined_Y4B_ChainA_402.mrc
example/8si9_ligand_null/: original_Y4B_ChainA_402.mrc  refined_Y4B_ChainA_402.mrc
example/8si9_ligand_rotated/: original_Y4B_ChainA_402.mrc  refined_Y4B_ChainA_402.mrc
example/8si9_ligand_shifted/: 8si9.cif  original_Y4B_ChainA_402.mrc  refined_Y4B_ChainA_402.mrc
example/No_Lig/: original_UNK_ChainX_1.mrc  refined_UNK_ChainX_1.mrc
