[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CryoLigate"
version = "1.0.0"
description = "Enhancing the resolvability of cryo-EM maps in protein-ligand complexes using deep learning."
readme = "README.md"
authors = [
    { name = "Nandan Haloi" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"

# Core dependencies strictly required for running local inference
dependencies = [
    "numpy",
    "scipy",
    "gemmi",
    "mrcfile",
    "timm",
    "einops",
    "torch",
]

# Optional dependencies for researchers who want to train the model
[project.optional-dependencies]
train = [
    "wandb",
    "h5py",
    "matplotlib",
    "seaborn",
]

# This creates the clean, case-insensitive user command-line entrypoint
[project.scripts]
CryoLigate-infer = "CryoLigate.inference:main"