[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryoligate"
version = "2.0.0"
description = "Enhancing the resolvability of cryo-EM maps in protein-ligand complexes using deep learning."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Nandan Haloi" }]
license = { text = "MIT" }

keywords = ["cryo-EM", "protein", "ligand", "deep-learning", "bioinformatics", "structural-biology"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy",
    "scipy",
    "pillow>=10.0.0",
    "gemmi",
    "mrcfile",
    "timm",
    "einops",
    "torch>=2.0.0",
]

[project.optional-dependencies]
train = [
    "wandb",
    "h5py",
    "matplotlib",
    "seaborn",
]

[project.scripts]
cryoligate-infer = "cryoligate.inference:main"

[project.urls]
Homepage = "https://github.com/nandanhaloi123/CryoLigATE"
Repository = "https://github.com/nandanhaloi123/CryoLigATE"
Issues = "https://github.com/nandanhaloi123/CryoLigATE/issues"

[tool.setuptools]
packages = ["cryoligate"]